# AndroidPdfiumKit

./: .gitignore  LICENSE  README.md  README_zh_CN.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/aderan/android/pdfiumandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/aderan/android/androidpdfiumkit/: FileUtil.kt  MainActivity.kt  PDFTextActivity.kt  PDFViewActivity.kt  Utils.kt
app/src/main/java/io/aderan/android/androidpdfiumkit/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_pdf_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/docube/android/pdfiumandroid/: ExampleUnitTest.kt
docs/: releasing.md  todo.md
gradle/wrapper/: gradle-wrapper.properties
pdfium/: build.gradle
pdfium/src/androidTest/java/io/docube/android/pdfium/: ExampleInstrumentedTest.java
pdfium/src/main/cpp/: CMakeLists.txt
pdfium/src/main/cpp/src/: mainJNILib.cpp  util.hpp
pdfium/src/main/java/com.shockwave/pdfium/: PdfDocument.java  PdfiumCore.java
pdfium/src/test/java/io/docube/android/pdfium/: ExampleUnitTest.java
pdfviewer/: build.gradle
scripts/: replace_sdk_tool_version.sh  sync_pdfium_so.sh
